unpackaged/main/default/objects/zkmulti__MCCustoms_Item__c/zkmulti__MCCustoms_Item__c.object-meta.xml
<CustomObject>
    <label>Customs Item</label>
    <nameField>
        <displayFormat>Customs Item-{0000000}</displayFormat>
        <label>Customs Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customs Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>