unpackaged/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__Contents_Type__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Contents_Type__c</fullName>
    <label>Contents Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DOCUMENTS_ONLY</fullName>
                <label>Documents</label>
            </value>
            <value>
                <fullName>NON_DOCUMENTS</fullName>
                <label>Commodities</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>