unpackaged/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__ExportLicenseExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ExportLicenseExpirationDate__c</fullName>
    <label>Export License Expiration Date</label>
    <type>Date</type>
</CustomField>