unpackaged/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__ExportManagementRefNumber__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ExportManagementRefNumber__c</fullName>
    <label>Export Management Reference Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>