unpackaged/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__ExportType__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ExportType__c</fullName>
    <label>Export Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Foreign</fullName>
            </value>
            <value>
                <fullName>Foreign Military</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>