unpackaged/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__Hazardous_Material__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Hazardous_Material__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hazardous Material</label>
    <type>Checkbox</type>
</CustomField>