unpackaged/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__Individually_Packed__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Individually_Packed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Individually Packed</label>
    <type>Checkbox</type>
</CustomField>