unpackaged/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__Is_Profile__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Is_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Profile</label>
    <type>Checkbox</type>
</CustomField>