unpackaged/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__JointProduction__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__JointProduction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joint Production</label>
    <type>Checkbox</type>
</CustomField>