unpackaged/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__NetCostDateRangeEnd__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__NetCostDateRangeEnd__c</fullName>
    <label>Net Cost Date Range End</label>
    <type>Date</type>
</CustomField>