unpackaged/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__NetCostDateRangeStart__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__NetCostDateRangeStart__c</fullName>
    <label>Net Cost Date Range Start</label>
    <type>Date</type>
</CustomField>