unpackaged/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__NMFC_Class__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__NMFC_Class__c</fullName>
    <description>National Motor Freight Standard Freight Classification Code</description>
    <label>NMFC Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>