unpackaged/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__Package__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package</label>
    <referenceTo>zkmulti__MCPackage__c</referenceTo>
    <relationshipLabel>Customs Items</relationshipLabel>
    <relationshipName>Customs_Items</relationshipName>
    <type>Lookup</type>
</CustomField>