unpackaged/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__ScheduleBUnitOfMeasurementCode__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ScheduleBUnitOfMeasurementCode__c</fullName>
    <label>Schedule B Unit Of Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barrels</fullName>
            </value>
            <value>
                <fullName>Carat</fullName>
            </value>
            <value>
                <fullName>Content Kilogram</fullName>
            </value>
            <value>
                <fullName>Square Centimeters</fullName>
            </value>
            <value>
                <fullName>Content Ton</fullName>
            </value>
            <value>
                <fullName>Curie</fullName>
            </value>
            <value>
                <fullName>Clean Yield Kilogram</fullName>
            </value>
            <value>
                <fullName>Dozen</fullName>
            </value>
            <value>
                <fullName>Dozen Pieces</fullName>
            </value>
            <value>
                <fullName>Dozen Pairs</fullName>
            </value>
            <value>
                <fullName>Fiber Meter</fullName>
            </value>
            <value>
                <fullName>Gross Containers</fullName>
            </value>
            <value>
                <fullName>Gram</fullName>
            </value>
            <value>
                <fullName>Gross</fullName>
            </value>
            <value>
                <fullName>Hundred</fullName>
            </value>
            <value>
                <fullName>Kilogram</fullName>
            </value>
            <value>
                <fullName>Thousand Cubic Meters</fullName>
            </value>
            <value>
                <fullName>Kilogram Total Sugars</fullName>
            </value>
            <value>
                <fullName>Liter</fullName>
            </value>
            <value>
                <fullName>Meter</fullName>
            </value>
            <value>
                <fullName>Square Meters</fullName>
            </value>
            <value>
                <fullName>Cubic Meters</fullName>
            </value>
            <value>
                <fullName>Millicurie</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Pieces</fullName>
            </value>
            <value>
                <fullName>Proof Liter</fullName>
            </value>
            <value>
                <fullName>Pack</fullName>
            </value>
            <value>
                <fullName>Pairs</fullName>
            </value>
            <value>
                <fullName>Running Bales</fullName>
            </value>
            <value>
                <fullName>Square</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>