unpackaged/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__Shipment__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment</label>
    <referenceTo>zkmulti__MCShipment__c</referenceTo>
    <relationshipName>Customs_Items</relationshipName>
    <type>Lookup</type>
</CustomField>