unpackaged/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__UnitOfMeasurement__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__UnitOfMeasurement__c</fullName>
    <label>Unit Of Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barrel</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Bag</fullName>
            </value>
            <value>
                <fullName>Bunch</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Bolt</fullName>
            </value>
            <value>
                <fullName>Butt</fullName>
            </value>
            <value>
                <fullName>Canister</fullName>
            </value>
            <value>
                <fullName>Centimeter</fullName>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
            <value>
                <fullName>Crate</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Carton</fullName>
            </value>
            <value>
                <fullName>Cylinder</fullName>
            </value>
            <value>
                <fullName>Dozen</fullName>
            </value>
            <value>
                <fullName>Each</fullName>
            </value>
            <value>
                <fullName>Envelope</fullName>
            </value>
            <value>
                <fullName>Feet</fullName>
            </value>
            <value>
                <fullName>Kilogram</fullName>
            </value>
            <value>
                <fullName>Kilograms</fullName>
            </value>
            <value>
                <fullName>Pound</fullName>
            </value>
            <value>
                <fullName>Pounds</fullName>
            </value>
            <value>
                <fullName>Liter</fullName>
            </value>
            <value>
                <fullName>Meter</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Packet</fullName>
            </value>
            <value>
                <fullName>Pallet</fullName>
            </value>
            <value>
                <fullName>Piece</fullName>
            </value>
            <value>
                <fullName>Pieces</fullName>
            </value>
            <value>
                <fullName>Proof Liters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>